@@ -2,6 +2,24 @@
 ## Introduction
 This is the README file for the coursework for COMP2042. The coursework involves performing maintenance on the provided JavaFx project for the game, Frogger, as well as adding extensions to improve the game.
 
+##Requirements
+Needs JavaFX installed and a compiler, for this project Eclipse was used.
+
+## Installation
+1. Download the whole ZIP file from GitHub onto your desktop.
+2. Save your ZIP file into a new folder and right-click select Extract Here.
+3. Import the project into Eclipse IDE.
+4. Select TryFrog1 file folder then click Finish.
+5. Click the Run drop down menu and click Run Configurations.
+6. Put in --module-path "C:\Users\lawkh\Downloads\javafx-sdk-11.0.2\lib" --add-modules=ALL-MODULE-PATH in VM arguments.
+7. Game is good to go.
+
+##Credits
+This game is improved and extended from https://github.com/hirish99/Frogger-Arcade-Game
+
+##License
+This Game is copyright Free
+
 ## Maintenence
 1. Refactoring the code by putting all the image files and music files into separate different folders.
 2. The main menu code is refactored into a new class from Main.java to avoid clutter in the Main.java file and to ensure it is readable.
